K8S/DeployNGINX/2.1-DeployServiceLB.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-deploy-nginx
  #namespace: default
spec:
  #externalTrafficPolicy: Cluster
  ports:
    port: 80
    protocol: TCP
  selector:
    app: nginx
  #sessionAffinity: None
  type: LoadBalancer
