K8S/DeployNGINX/2.2-DeployServiceING.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-deploy-nginx
  #namespace: default
spec:
  ports:
    #Port for ClusterIP
    #Ingress point to port 8088
  - port: 80
    protocol: TCP
    #Port for POD
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
