K8S/DeployNGINX/3-DeployIngressRule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-service-deploy-nginx
  #namespace: foo
spec:
  rules:
    - host: kn.com
      http:
        paths:
          - backend:
              serviceName: service-deploy-nginx
              servicePort: 80
            path: /
